<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/img_background"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingTop="60dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvActiveUsers"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/header_color"
            android:text="Active Users: 0"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDeletedUsers"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/header_color"
            android:text="Deleted Users: 0"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"
            android:backgroundTint="@color/purple"
            android:textColorHint="@color/purple_text"
            android:textColor="@color/purple_text"
            android:id="@+id/etFirstName"
            android:hint="@string/first_name"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"
            android:backgroundTint="@color/purple"
            android:textColorHint="@color/purple_text"
            android:textColor="@color/purple_text"
            android:id="@+id/etLastName"
            android:hint="@string/last_name"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"
            android:backgroundTint="@color/purple"
            android:textColorHint="@color/purple_text"
            android:textColor="@color/purple_text"
            android:id="@+id/etAge"
            android:hint="@string/age"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"
            android:backgroundTint="@color/purple"
            android:textColorHint="@color/purple_text"
            android:textColor="@color/purple_text"
            android:id="@+id/etEmail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:weightSum="3">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_user"
            android:id="@+id/btnAddUser"
            android:layout_weight="1"
            android:background="@drawable/btn_background_layout"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_user"
            android:id="@+id/btnRemoveUser"
            android:layout_weight="1"
            android:background="@drawable/btn_background_layout"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_user"
            android:id="@+id/btnUpdateUser"
            android:layout_weight="1"
            android:background="@drawable/btn_background_layout"
            android:textColor="@color/white"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSuccessError"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="60dp"/>


</androidx.appcompat.widget.LinearLayoutCompat>